--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
-    "name": "arrpee-theme",
-    "displayName": "Arrpee Theme",
-	"publisher": "arrpee",
-    "repository": {
-		"type": "git",
-		"url": "https://github.com/arrpee/vscode-theme"
-	},
-    "description": "",
-    "version": "0.0.1",
-    "engines": {
-        "vscode": "^1.67.0"
-    },
-    "categories": [
-        "Themes"
-    ],
-    "contributes": {
-        "themes": [
-            {
-                "label": "Arrpee",
-                "uiTheme": "vs-dark",
-                "path": "./themes/Arrpee-color-theme.json"
-            }
-        ]
-    }
+  "name": "arrpee-theme",
+  "displayName": "Arrpee Theme",
+  "publisher": "arrpee",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arrpee/vscode-theme"
+  },
+  "description": "",
+  "version": "0.0.1",
+  "engines": {
+    "vscode": "^1.67.0"
+  },
+  "categories": [
+    "Themes"
+  ],
+  "contributes": {
+    "themes": [
+      {
+        "label": "Arrpee",
+        "uiTheme": "vs-dark",
+        "path": "./themes/Arrpee-color-theme.json"
+      }
+    ]
+  },
+  "scripts": {
+    "deploy": "vsce publish --yarn"
+  },
+  "devDependencies": {
+    "vsce": "^2.8.0"
+  }
 }
